@@ -1,3 +1,8 @@
+2006-12-27  Matthias Clasen  <mclasen@redhat.com>
+
+	* glib/gunicollate.c (g_utf8_collate_key): Don't modify
+	the current locale.  (#389300)
+
 2006-12-24  Matthias Clasen  <mclasen@redhat.com>
 
 	* tests/run-collate-tests.sh:
